[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/ui/actor/HpBar.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/ui/hpbar_background.png" type="Texture" id=2]
[ext_resource path="res://assets/graphics/ui/hpbar_fill_back.png" type="Texture" id=3]
[ext_resource path="res://assets/graphics/ui/hpbar_fill_front.png" type="Texture" id=4]

[node name="HpBar" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -6.0
margin_top = -3.0
margin_right = 6.0
texture = ExtResource( 2 )

[node name="HpBack" type="TextureProgress" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
step = 0.0
texture_progress = ExtResource( 3 )

[node name="HpFront" type="TextureProgress" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
texture_progress = ExtResource( 4 )

[node name="ModifierTextPos" type="Node2D" parent="."]

[node name="ModifierText" type="Label" parent="ModifierTextPos"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = -5.0
margin_right = 15.0
margin_bottom = 1.0
custom_colors/font_color = Color( 0.929412, 0.882353, 0.831373, 1 )
text = "42"

[node name="Tween" type="Tween" parent="."]
